--- a/set.env.Example
+++ b/set.env.Example
@@ -1,12 +1,12 @@
-OWNER_NAME="💀MASTER MIND💀"
+OWNER_NAME="💀SHANUWA MIND💀"
 PREFIX="-"
 PUBLIC_MODE='non'
 AUTO_READ_STATUS="non"
 AUTO_DOWNLOAD_STATUS="oui"
-BOT_NAME= "MASTER-MD"
-IMAGE_MENU= "https://telegra.ph/file/74b612f51b7a5750191af.jpg"
+BOT_NAME= "SHANUWA-MD"
+IMAGE_MENU= "https://telegra.ph/file/dddcc6c76f2b07627d327.jpg"
 NUMERO_OWNER= ""
-OWNER_NAME= "Sahan Maduwantha"
+OWNER_NAME= "Shanuwa"
 DATABASE_URL= ""
 WARN_COUNT= ""
 OPENAI_API_KEY= ""
