--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name":"SHANUWA-MD",
+  "name":"sHANUWA-MD",
   "description":"An easy and simple WhatsApp bot developed by Sahan Maduwantha",
   "keywords":["bot","node","baileys","whatsapp"],
   "logo":"https://telegra.ph/file/4d65e21eef13fc469d2ca.jpg",
